# nostr-sdk-flutter

./: CHANGELOG.md  README.md  cargokit_options.yaml  flutter_rust_bridge.yaml  justfile  pubspec.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  precompiled_binaries.yml
android/: build.gradle
contrib/scripts/: check-crate.sh  check-flutter.sh  check-fmt.sh  check.sh  generate.sh  precommit.sh
example/lib/: main.dart
ios/: nostr_sdk.podspec
lib/: nostr_sdk.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: client.dart  database.dart  database.freezed.dart
lib/src/rust/api/client/: builder.dart  notification.dart  notification.freezed.dart  options.dart  output.dart
lib/src/rust/api/database/: events.dart
lib/src/rust/api/protocol/: event.dart  filter.dart  key.dart  signer.dart  signer.freezed.dart
lib/src/rust/api/protocol/event/: builder.dart  id.dart  tag.dart  unsigned.dart
lib/src/rust/api/protocol/key/: public_key.dart  secret_key.dart
lib/src/rust/api/protocol/nips/: nip59.dart
lib/src/rust/api/protocol/types/: filter.dart
lib/src/rust/api/relay/: options.dart  options.freezed.dart
linux/: CMakeLists.txt
macos/: nostr_sdk.podspec
rust/: Cargo.toml  build.rs  cargokit.yml  generate.rs  rust-toolchain.toml
rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  lib.rs
rust/src/api/: mod.rs
rust/src/api/client/: builder.rs  mod.rs  notification.rs  options.rs  output.rs
rust/src/api/database/: events.rs  mod.rs
rust/src/api/protocol/: filter.rs  mod.rs  signer.rs
rust/src/api/protocol/event/: builder.rs  id.rs  mod.rs  unsigned.rs
rust/src/api/protocol/event/tag/: mod.rs
rust/src/api/protocol/key/: mod.rs  public_key.rs  secret_key.rs
rust/src/api/protocol/nips/: mod.rs  nip59.rs
rust/src/api/protocol/types/: filter.rs  mod.rs
rust/src/api/relay/: mod.rs  options.rs
windows/: CMakeLists.txt
