[package]
name = "nostr_sdk"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "generate"
path = "generate.rs"
required-features = ["codegen"]

[features]
default = []
codegen = ["dep:flutter_rust_bridge_codegen"]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
flutter_rust_bridge = { version = "=2.0.0", features = ["anyhow", "chrono"] }
flutter_rust_bridge_codegen = { version = "=2.0.0", optional = true }
nostr-sdk  = { version = "0.39", default-features = false, features = ["all-nips", "lmdb", "tor"] }
#nostr-sdk  = { git = "https://github.com/rust-nostr/nostr", rev = "265011f7766fa104bfc9da63be83d54bad543c5b", default-features = false, features = ["all-nips", "tor"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce the number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Strip symbols from binary.
